# merg

./: .gitignore  CHANGELOG.md  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
assets/: implementation_plan.md  task.md  walkthrough.md
assets/scripts/: deep_merge.md  flatten_yaml.py
deep_merge/: __init__.py  core.py  exceptions.py
examples/: deepmerge.py
merg/: __init__.py  core.py  exceptions.py
tests/: test_data.yml  test_deep_merge.py  test_exclude_paths.py  test_fixes.py  test_knockout.py  test_list_options.py  test_options_validation.py  test_path_parsing.py  test_types.py
