[project]
name = "deep-merge"
version = "0.1.0"
description = "A Python library for deep merging dictionaries, inspired by the Ruby deep_merge gem."
authors = [{name = "Antigravity", email = "antigravity@google.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deep_merge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
